basic functionality & short-term roadmap